force-app/main/default/objects/Subject_Registration__c/Subject_Registration__c.object-meta.xml
<CustomObject>
    <label>Subject Registration</label>
    <nameField>
        <displayFormat>SRG-{0000000000}</displayFormat>
        <label>Subject Registration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subject Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>