force-app/main/default/objects/Subject_Registration__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <formula>Subject__r.Number_of_Credits__c</formula>
    <label>Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>