force-app/main/default/objects/Subject_Registration__c/fields/Final_Exam_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Exam_Score__c</fullName>
    <label>Final Exam Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>