force-app/main/default/objects/Subject_Registration__c/fields/Homework_Score__c.field-meta.xml
<CustomField>
    <fullName>Homework_Score__c</fullName>
    <label>Homework Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>