force-app/main/default/objects/Subject_Registration__c/fields/Mid_Term_Exam_Score__c.field-meta.xml
<CustomField>
    <fullName>Mid_Term_Exam_Score__c</fullName>
    <label>Mid-Term Exam Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>