force-app/main/default/objects/Subject_Registration__c/fields/Subject_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Class_Name__c</fullName>
    <formula>Subject_Class__r.Subject_Class_Name__c</formula>
    <label>Class</label>
    <type>Text</type>
</CustomField>