force-app/main/default/objects/Subject_Registration__c/fields/Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Name__c</fullName>
    <formula>Subject__r.Subject_Name__c</formula>
    <label>Subject</label>
    <type>Text</type>
</CustomField>