force-app/main/default/objects/Subject_Registration__c/fields/Tuition__c.field-meta.xml
<CustomField>
    <fullName>Tuition__c</fullName>
    <formula>Subject__r.Number_of_Credits__c  * 300000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tuition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>